logo and social icons

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
     }
   </style>
   <style type="text/css">
+    @media only screen and (max-width:480px) {
+      table.mj-full-width-mobile {
+        width: 100% !important;
+      }
+
+      td.mj-full-width-mobile {
+        width: auto !important;
+      }
+    }
   </style>
 </head>
 
@@ -110,9 +119,22 @@
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                             <tbody>
                               <tr>
+                                <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                    <tbody>
+                                      <tr>
+                                        <td style="width:200px;">
+                                          <img alt="Logotype" height="auto" src="https://res.cloudinary.com/distbyxa/image/upload/v1633148720/bytebox/m_m_logo_transparent_u3wu8d.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="200">
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
                                 <td align="center" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:center;color:#000000;">
-                                    <h1 style="font-size: 15px; padding-top: 0px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px;">Jonathan Doe, we are so happy to have you as a Malware&nbsp;Mauler customer. Welcome!</h1>
+                                    <h1 style="font-size: 18px; padding-top: 0px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px;">Jonathan Doe, we are so happy to have you as a Malware&nbsp;Mauler customer. Welcome!</h1>
                                   </div>
                                 </td>
                               </tr>
@@ -143,7 +165,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#111111;">
-                                    <h2 style="color: rgb(15, 104, 54); font-size: 15px;">Order Information</h2>
+                                    <h2 style="color: rgb(15, 104, 54); font-size: 18px; line-height: 10px;">Order Information</h2>
                                   </div>
                                 </td>
                               </tr>
@@ -210,7 +232,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#000000;">
-                                    <h2 style="color: rgb(15, 104, 54); font-size: 15px;"> Billing Address </h2>
+                                    <h2 style="color: rgb(15, 104, 54); font-size: 18px; line-height: 10px;"> Billing Address </h2>
                                   </div>
                                 </td>
                               </tr>
@@ -284,7 +306,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#000000;">
-                                    <h2 style="color: rgb(15, 104, 54); font-size: 15px;">Products in your order</h2>
+                                    <h2 style="color: rgb(15, 104, 54); font-size: 18px; line-height: 10px;">Products in your order</h2>
                                   </div>
                                 </td>
                               </tr>
@@ -316,25 +338,11 @@
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#555555;">Amount 65,21 €</div>
                                 </td>
                               </tr>
-                            </tbody>
-                          </table>
-                        </div>
-                        <!--[if mso | IE]></td></tr></table><![endif]-->
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="600px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-              <div style="margin:0px auto;max-width:600px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
-                  <tbody>
-                    <tr>
-                      <td style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;">
-                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
-                            <tbody>
+                              <tr>
+                                <td style="font-size:0px;word-break:break-word;">
+                                  <div style="height:20px;line-height:20px;">&#8202;</div>
+                                </td>
+                              </tr>
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#555555;">Subtotal: 85,21 €</div>
@@ -377,7 +385,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#000000;">
-                                    <h2 style="color: rgb(15, 104, 54); font-size: 15px;">Payment Information</h2>
+                                    <h2 style="color: rgb(15, 104, 54); font-size: 18px; line-height: 10px;">Payment Information</h2>
                                   </div>
                                 </td>
                               </tr>
@@ -416,7 +424,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#000000;">
-                                    <h2 style="color: rgb(15, 104, 54); font-size: 15px;">Installation</h2>
+                                    <h2 style="color: rgb(15, 104, 54); font-size: 18px; line-height: 10px;">Installation</h2>
                                   </div>
                                 </td>
                               </tr>
@@ -460,7 +468,7 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#000000;">
-                                    <h2 style="color: rgb(15, 104, 54); font-size: 15px;">Keep in touch</h2>
+                                    <h2 style="color: rgb(15, 104, 54); font-size: 18px; line-height: 10px;">Keep in touch</h2>
                                   </div>
                                 </td>
                               </tr>
@@ -473,8 +481,65 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
-                                  <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#555555;">Social Placeholder</div>
+                                <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="margin:0px;">
+                                    <tbody>
+                                      <tr>
+                                        <td style="padding:4px;vertical-align:middle;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#3b5998;border-radius:3px;width:25px;">
+                                            <tbody>
+                                              <tr>
+                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
+                                                  <a href="https://www.facebook.com/sharer/sharer.php?u=#" target="_blank" style="color: #0000ee;">
+                                                    <img height="25" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="25">
+                                                  </a>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </td>
+                                        <td style="vertical-align:middle;">
+                                          <a href="https://www.facebook.com/sharer/sharer.php?u=#" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 22px; text-decoration: none;" target="_blank"> Join the community on facebook </a>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td style="padding:4px;vertical-align:middle;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#55acee;border-radius:3px;width:25px;">
+                                            <tbody>
+                                              <tr>
+                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
+                                                  <a href="https://twitter.com/intent/tweet?url=#" target="_blank" style="color: #0000ee;">
+                                                    <img height="25" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="25">
+                                                  </a>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </td>
+                                        <td style="vertical-align:middle;">
+                                          <a href="https://twitter.com/intent/tweet?url=#" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 45px; text-decoration: none;" target="_blank"> Follow Malware Mauler on twitter </a>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td style="padding:4px;vertical-align:middle;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FF00FF;border-radius:3px;width:25px;">
+                                            <tbody>
+                                              <tr>
+                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
+                                                  <a href="url" target="_blank" style="color: #0000ee;">
+                                                    <img height="25" src="path-to-your-icon" style="border-radius:3px;display:block;" width="25">
+                                                  </a>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </td>
+                                        <td style="vertical-align:middle;">
+                                          <a href="url" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 22px; text-decoration: none;" target="_blank"> Optional label </a>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
                                 </td>
                               </tr>
                               <tr>
