--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                               </tr>
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
-                                  <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#555555;">Follow the step-by_step installation instuctions : <a href="#" style="color: #0000ee;">Malware Mauler Installation in 8 steps</a></div>
+                                  <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#555555;">Follow the step-by-step installation instuctions : <a href="#" style="color: #0000ee;">Malware Mauler Installation in 8 steps</a></div>
                                 </td>
                               </tr>
                             </tbody>
@@ -486,12 +486,12 @@
                                     <tbody>
                                       <tr>
                                         <td style="padding:4px;vertical-align:middle;">
-                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#3b5998;border-radius:3px;width:25px;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#3b5998;border-radius:3px;width:30px;">
                                             <tbody>
                                               <tr>
-                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
+                                                <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                                   <a href="https://www.facebook.com/sharer/sharer.php?u=#" target="_blank" style="color: #0000ee;">
-                                                    <img height="25" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="25">
+                                                    <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="30">
                                                   </a>
                                                 </td>
                                               </tr>
@@ -504,12 +504,12 @@
                                       </tr>
                                       <tr>
                                         <td style="padding:4px;vertical-align:middle;">
-                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#55acee;border-radius:3px;width:25px;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#55acee;border-radius:3px;width:30px;">
                                             <tbody>
                                               <tr>
-                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
+                                                <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                                   <a href="https://twitter.com/intent/tweet?url=#" target="_blank" style="color: #0000ee;">
-                                                    <img height="25" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="25">
+                                                    <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="30">
                                                   </a>
                                                 </td>
                                               </tr>
@@ -517,17 +517,17 @@
                                           </table>
                                         </td>
                                         <td style="vertical-align:middle;">
-                                          <a href="https://twitter.com/intent/tweet?url=#" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 45px; text-decoration: none;" target="_blank"> Follow Malware Mauler on twitter </a>
+                                          <a href="https://twitter.com/intent/tweet?url=#" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 50px; text-decoration: none;" target="_blank"> Follow Malware Mauler on twitter </a>
                                         </td>
                                       </tr>
                                       <tr>
                                         <td style="padding:4px;vertical-align:middle;">
-                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FF00FF;border-radius:3px;width:25px;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#b9bad4;border-radius:3px;width:30px;">
                                             <tbody>
                                               <tr>
-                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
-                                                  <a href="url" target="_blank" style="color: #0000ee;">
-                                                    <img height="25" src="path-to-your-icon" style="border-radius:3px;display:block;" width="25">
+                                                <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
+                                                  <a href="#" target="_blank" style="color: #0000ee;">
+                                                    <img height="30" src="https://res.cloudinary.com/distbyxa/image/upload/v1633176280/bytebox/wrench_tg37xj.png" style="border-radius:3px;display:block;" width="30">
                                                   </a>
                                                 </td>
                                               </tr>
@@ -535,7 +535,7 @@
                                           </table>
                                         </td>
                                         <td style="vertical-align:middle;">
-                                          <a href="url" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 22px; text-decoration: none;" target="_blank"> Optional label </a>
+                                          <a href="#" style="color: #333333; font-size: 13px; font-family: Ubuntu, Helvetica, Arial, sans-serif; line-height: 22px; text-decoration: none;" target="_blank"> Contact support </a>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -555,6 +555,11 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                                   <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:14px;line-height:22px;text-align:left;color:#000000;"><a href="#" style="color: #0000ee;">malwaremauler.com/support</a></div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td style="font-size:0px;word-break:break-word;">
+                                  <div style="height:20px;line-height:20px;">&#8202;</div>
                                 </td>
                               </tr>
                               <tr>
@@ -590,6 +595,11 @@
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
                         <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:12px;line-height:22px;text-align:left;color:#555555;">Malware Mauler Software s.r.o., Karla Engliše 2332/3b, 150 00, Prague 5, Czech Republic</div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="left" style="font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
+                        <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:12px;line-height:22px;text-align:left;color:#555555;">"Contact support" icon made by <a href="https://www.freepik.com" title="Freepik" style="color: #0000ee;">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" style="color: #0000ee;">www.flaticon.com</a></div>
                       </td>
                     </tr>
                   </tbody>
