--- a/index.html
+++ b/index.html
@@ -486,12 +486,12 @@
                                     <tbody>
                                       <tr>
                                         <td style="padding:4px;vertical-align:middle;">
-                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#3b5998;border-radius:3px;width:30px;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#3b5998;border-radius:3px;width:25px;">
                                             <tbody>
                                               <tr>
-                                                <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
+                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
                                                   <a href="https://www.facebook.com/sharer/sharer.php?u=#" target="_blank" style="color: #0000ee;">
-                                                    <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="30">
+                                                    <img height="25" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="25">
                                                   </a>
                                                 </td>
                                               </tr>
@@ -504,12 +504,12 @@
                                       </tr>
                                       <tr>
                                         <td style="padding:4px;vertical-align:middle;">
-                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#55acee;border-radius:3px;width:30px;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#55acee;border-radius:3px;width:25px;">
                                             <tbody>
                                               <tr>
-                                                <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
+                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
                                                   <a href="https://twitter.com/intent/tweet?url=#" target="_blank" style="color: #0000ee;">
-                                                    <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="30">
+                                                    <img height="25" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="25">
                                                   </a>
                                                 </td>
                                               </tr>
@@ -522,12 +522,12 @@
                                       </tr>
                                       <tr>
                                         <td style="padding:4px;vertical-align:middle;">
-                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#b9bad4;border-radius:3px;width:30px;">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-radius:3px;width:25px;">
                                             <tbody>
                                               <tr>
-                                                <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
+                                                <td style="font-size:0;height:25px;vertical-align:middle;width:25px;">
                                                   <a href="#" target="_blank" style="color: #0000ee;">
-                                                    <img height="30" src="https://res.cloudinary.com/distbyxa/image/upload/v1633176280/bytebox/wrench_tg37xj.png" style="border-radius:3px;display:block;" width="30">
+                                                    <img height="25" src="https://res.cloudinary.com/distbyxa/image/upload/v1633176280/bytebox/wrench_tg37xj.png" style="border-radius:3px;display:block;" width="25">
                                                   </a>
                                                 </td>
                                               </tr>
